--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,7 @@ description = "Command line tool to rip wav files from LSDJ SRAM dumps"
 "rboy" = { git = "https://github.com/mvdnes/rboy.git", rev = "d8acd226"}
 "clap" = { version = "4.5.38", features = ["env"] }
 "wavers" = "1.5.1"
+# TODO: Revert to canonical when fix merges: https://github.com/stijnfrishert/lsdj-rs/pull/2
+"lsdj" = { git = "https://github.com/struthiocamelus/lsdj-rs.git", rev="647fe7c" }
 "spinner" = { version = "0.5.0", optional = true }
 "png" = { version= "0.18.0-rc", optional = true }
